# os_base

./: .gitignore
.devcontainer/: devcontainer.json
cp/doc/: 215_Агафонов_курсач.docx
cp/src/: CMakeLists.txt  Makefile  client.cpp  game.h  myMQ.h  player.h  server.cpp
lab1/: CMakeLists.txt  М8О-215Б-23_Агафонов_Лаба1.docx
lab1/src/: child.cpp  main.cpp
lab2/: 215_Агафонов_Лаб2 (1).docx  215_Агафонов_Лаб2.docx  README.md  generate_imput.py  sort.cpp  ~$5_Агафонов_Лаб2 (1).docx
lab3/: 215_Агафонов_Лаб3.docx  CMakeLists.txt
lab3/src/: child.cpp  main.cpp
lab4/doc/: 215_Агафонов_Лаб4.docx  ~$5_Агафонов_Лаб4.docx
lab4/src/: Makefile  SinIntegral_Rect.cpp  SinIntegral_Trapezoid.cpp  Sort_Bubble.cpp  Sort_Quick.cpp  TestProgram1.cpp  TestProgram2.cpp  strace_output.txt  strace_output2.txt
lab5/: README.md
lab5/doc/: 215_Агафонов_Лаб7.docx
lab5/src/: CMakeLists.txt  Makefile  computing.cpp  control.cpp  lib.cpp  lib.h
lab8/: 215_Агафонов_Лаб8.docx
